@startuml

class Salle {
- idSalle : int
- nom : string
- nombrePlaces : int
}

class Séance {
- idSéance : int
- dateProjection : date
- tarifNormal : float
- tarifReduit : float
}

class Film {
- idFilm : int
- titre : string
- duree : int
}

class User {
- idUser : int
- username : string
- password : string
- role : string
}

class Reservation {
- idResa : int
- NombrePlaceResa : int
- dateResa : date
- montantTotal : float
}


Séance "0..*"--> "1..1" Film : projecte
Séance "1..*" --> "1..1" Salle : se deroule
User "0..1" <-- "0..*" Reservation : realise
Reservation "1..*" --> "1..1" Séance : concerne

@enduml